@@ -53,7 +53,7 @@ None.
 
 =head1 VERSION
 
-version 0.07
+version 0.08
 
 =head1 METHODS
 
